--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
   "author": "haubar <haubarclack@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "dotenv": "^8.2.0",
     "serverless-offline": "^5.12.1"
   },
   "dependencies": {
     "bluebird": "^3.5.0",
     "dotenv": "^8.2.0",
-    "mongoose": "^5.8.0",
+    "mongoose": "^4.9.6",
+    "serverless-dotenv-plugin": "^2.1.1",
     "validator": "^7.0.0"
   }
 }
