--- a/serverless.yml
+++ b/serverless.yml
@@ -1,15 +1,16 @@
 
 service: matcha-lambda
 # app and org for use with dashboard.serverless.com
-#app: your-app-name
-#org: your-org-name
-
+app: matchakon
+org: haubar
+plugins:
+  - serverless-dotenv-plugin
 
 provider:
   name: aws
   runtime: nodejs12.x
-  stage: dev
 
+  
 functions:
   hello:
     handler: handler.hello
@@ -18,7 +19,7 @@ functions:
     handler: handler.createMatcha
     events:
       - http:
-          path: user
+          path: matcha
           method: post
           cors: true
 
